# kaggle-orbit-wars

./: .dockerignore  .gitignore  .updated-docs  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.kaggle  LICENSE  README.md  justfile  pyproject.toml  rust-toolchain.toml
.github/workflows/: container.yml
configs/: baseline.yaml  baseline_adam.yaml  baseline_adamw.yaml  baseline_cosine.yaml  baseline_pure.yaml  baseline_scaling.yaml  big_stateless.yaml  discrete_target_bins.yaml  extend_training.yaml  pufferish.yaml  scaling_12m.yaml  scaling_25m.yaml  scaling_50m.yaml  scaling_6m.yaml  stateless_153m.yaml  stateless_1B.yaml  stateless_200m.yaml  stateless_200m_2p_finetune.yaml  stateless_200m_2p_lora.yaml  stateless_266m.yaml  trunc_exp1_200_shipratio.yaml  trunc_exp2_200.yaml  trunc_exp3_300.yaml  trunc_exp4_shipratio_full.yaml  winner_ce_6m.yaml  winner_ce_6m_4x5090.yaml
configs/model/: recurrent_transformer_5m.yaml  recurrent_transformer_5m_gelu.yaml  stateless_transformer_11m.yaml  stateless_transformer_12m.yaml  stateless_transformer_153m.yaml  stateless_transformer_170m.yaml  stateless_transformer_1B.yaml  stateless_transformer_200m_d38.yaml  stateless_transformer_200m_d60.yaml  stateless_transformer_20m.yaml  stateless_transformer_20m_swiglu.yaml  stateless_transformer_20m_swiglu_discrete_targets.yaml  stateless_transformer_210m.yaml  stateless_transformer_21m_gelu.yaml  stateless_transformer_21m_swiglu.yaml  stateless_transformer_25m.yaml  stateless_transformer_266m.yaml  stateless_transformer_28m.yaml  stateless_transformer_2m.yaml  stateless_transformer_50m.yaml  stateless_transformer_5m.yaml  stateless_transformer_5m_pure.yaml  stateless_transformer_6m_cross_attn.yaml  stateless_transformer_6m_deep.yaml  stateless_transformer_6m_independent_critic.yaml  stateless_transformer_6m_win_only.yaml  stateless_transformer_tiny.yaml
configs/model/actor/: discrete_target_bins.yaml  discrete_targets.yaml  pure.yaml
configs/model/lora/: 2p_200m_qv_r16.yaml
configs/train/: baseline.yaml  debug.yaml  pufferish.yaml
docs/: containerization.md  model-architecture.md  pr-checklist.md  quantization-optimizations.md  rl-api-specs.md  rules-engine-plan.md  rules-engine.md  rules-parity-coverage.md  simulation-optimizations.md  write-up.md
python/: main.py
python/owl/: __init__.py  checkpoint_quantization.py  config.py  int8_emulation.py  quantization_formats.py  replay.py  rl.py  rs.pyi  utils.py
python/owl/agent/: __init__.py  agent.py  agent_config.yaml  checkpoint_quantization.py  config.py  kaggle_observation.py  utils.py
python/owl/model/: __init__.py  attn.py  base.py  config.py  factory.py  lora.py  lora_config.py  lora_linear.py  recurrent_transformer_v1.py  stateless_transformer_v1.py  transformer_v1.py
python/owl/model/actor/: __init__.py  common.py  config.py  discrete_target_bins.py  discrete_targets.py  logistic_mixture.py  pure.py
python/owl/train/: __init__.py  advantages.py  config.py  distributed.py  logging.py  metrics.py  optimizer.py  ppo.py  sampling.py  utils.py
scripts/: benchmark_checkpoints.py  benchmark_envs.py  build_kaggle_submission.sh  check_doc_freshness.py  check_python_311_syntax.py  download_replays.py  extract_model_weights.py  extract_replay_fixtures.py  generate_reference_fixtures.py  hello.py  regenerate_test_fixtures.sh  roundtrip_checkpoint_quantization.py  run_ppo.py
scripts/slurm/: launch-interactive.sh  launch-train.sbatch  launch_scaling_experiments.sh  launch_truncation_experiments.sh  smoke_scaling.sh
src/: lib.rs  rl.rs  rules_engine.rs
src/owl/: __init__.py  _core.pyi
src/rl/: action_spec.rs  obs_spec.rs  vec_env.rs
src/rules_engine/: env.rs  generation.rs  replay_tests.rs  state.rs  utils.rs
tests/: test_hello.py  test_rl.py
tests/fixtures/generation/: reference_generation.json
tests/owl/: test_checkpoint_quantization.py  test_config.py  test_int8_emulation.py  test_replay.py  test_rl.py
tests/owl/agent/: assert_agent_import_isolated.py  test_agent.py  test_checkpoint_quantization.py  test_kaggle_engine_sanitization.py  test_kaggle_observation.py
tests/owl/model/: test_attn.py  test_model_config_files.py  test_recurrent_transformer_v1.py  test_stateless_transformer_v1.py  test_transformer_v1.py
tests/owl/train/: test_advantages.py  test_config.py  test_distributed.py  test_loss.py  test_metrics.py  test_optimizer.py  test_ppo.py  test_sampling.py
tests/scripts/: test_benchmark_checkpoints.py  test_download_replays.py  test_extract_model_weights.py  test_roundtrip_checkpoint_quantization.py  test_run_ppo.py
tests/tools/: test_replay_viewer.py
tools/: orbit_wars_replay_viewer.html
