[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
rand = "0.10.1"

[profile.release]
lto = true
incremental = false
codegen-units = 1

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
