[package]
name = "owl"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
numpy = "0.28.0"
# "abi3-py311" tells pyo3 (and maturin) to build using the stable ABI with
# minimum Python version 3.11, matching the Kaggle competition runtime.
pyo3 = { version = "0.28.2", features = ["abi3-py311"] }
rand = "0.10.1"
rayon = "1.12.0"

[profile.release]
lto = true
incremental = false
codegen-units = 1

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
pyo3-build-config = { version = "0.28.3", features = ["resolve-config"] }
